fix: clear text text-overflow

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -10,7 +10,6 @@
 html, body
   padding 0
   margin 0
-  text-shadow: $textShadow
 body
   font-family Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   -webkit-font-smoothing antialiased
